Fixed item spacing in sidebar

--- a/glyphwitch/client/main.css
+++ b/glyphwitch/client/main.css
@@ -43,7 +43,7 @@ body {
 .file-tree li {
   /* no bullets */
   list-style-type: none;
-  margin: 2px 0;
+  margin: 1px 0;
   text-align: left; /* Ensure list items are left-aligned */
 }
 
@@ -51,14 +51,14 @@ body {
   text-decoration: none;
   color: #333;
   display: block;
-  padding: 3px 5px;
+  padding: 1px 1px;
   border-radius: 3px;
   text-align: left; /* Ensure link text is left-aligned */
   justify-content: flex-start; /* For flex containers, align to start */
 }
 
 .file-tree .collapse {
-  padding-left: 20px;
+  padding-left: 1ch;
   text-align: left; /* Ensure collapsed content is left-aligned */
 }
 
@@ -66,7 +66,7 @@ body {
 .file-tree ul, 
 .file-tree .collapse ul,
 .file-tree .d-flex {
-  padding-left: 20px;
+  padding-left: 5px;
   text-align: left;
   justify-content: flex-start;
   align-items: flex-start;
@@ -87,7 +87,7 @@ body {
 }
 
 .file-tree .collapse {
-  padding-left: 20px;
+  padding-left: 5px;
 }
 
 .file-tree .fa-caret-right {
